--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -3,7 +3,6 @@
 {% with domain='https://staycurious.in' %}
 {% for post in posts %}
 <article class="media content-section">
-    {{profile.bookmarked_posts}}
     <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
     <div class="media-body">
         <div class="article-metadata">
@@ -30,7 +29,11 @@
         {% comment %} <p class="link" style="display:none">{{link}}</p> {% endcomment %}
         <li><a class="btn copy" data-text={{link}} title="Copy link"><i class="fa fa-clipboard"></i></a></li>
         {# <li><button class="copy" onclick="C opy({{link}})"><img class="ml-2 mr-2" src="{% static 'img/copy.png' %}" alt="Copy to clipboard" style="width:40px"></button></li> #}
-        <li><a class="btn bookmark" data-post={{post.slug}} data-url={% url 'Blog:bookmark-post'%} title="Bookmark this post"><i class="fa fa-bookmark"></i></a></li>
+        {% if post.id in profile.get_bookmarked_posts %}
+        <li><a id="unbookmark" class="btn bookmark" data-post={{post.slug}} data-url={% url 'Blog:bookmark-post'%} title="Remove from bookmark"><i class="fa fa-bookmark" style="color:steelblue"></i></a></li>
+        {% else %}
+        <li><a id="bookmark" class="btn bookmark" data-post={{post.slug}} data-url={% url 'Blog:bookmark-post'%} title="Bookmark this post"><i class="fa fa-bookmark" style="color:darkgrey"></i></a></li>
+        {% endif %}
     {% endwith %}
     </ul>
 </article>
